--- a/themes/aero-dual/source/css/style.light.styl
+++ b/themes/aero-dual/source/css/style.light.styl
@@ -25,6 +25,7 @@ color-revert()
   background-color $theme-color
 
 @import '_helpers/mixins'
+@import '_variables.styl'
 
 @import '_typography/typo.css'
 @import '_typography/highlight.monikai-sublime'
