--- a/themes/aero-dual/source/css/_partial/index-entry.styl
+++ b/themes/aero-dual/source/css/_partial/index-entry.styl
@@ -15,6 +15,8 @@
     border-radius remify(2px)
   .post-excerpt
     overflow hidden
+    .excerpt-link
+      color #FFFFFF
   .date-and-category,
   .excerpt,
   .tags
@@ -27,6 +29,7 @@
     margin 0 4%
     font-size remify(14px)
     text-align justify
+    min-height 56px;
     p
       margin-bottom 0
   .date-and-category
