--- a/themes/aero-dual/source/css/style.dark.styl
+++ b/themes/aero-dual/source/css/style.dark.styl
@@ -24,6 +24,7 @@ color-revert()
   background-color $theme-color
 
 @import '_helpers/mixins'
+@import '_variables.styl'
 
 @import '_typography/typo.css'
 @import '_typography/highlight.gruvbox-light'
